--- a/TanksProgrammingTest/TanksProgrammingTest.vcxproj
+++ b/TanksProgrammingTest/TanksProgrammingTest.vcxproj
@@ -103,8 +103,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(ProjectDir)\Sources\Engine;$(ProjectDir)\External\json-develop\single_include;$(ProjectDir)\External\SDL2-2.0.14\include;$(ProjectDir)\External\SDL2_image-2.0.5\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)\External\SDL2-2.0.14\lib\x64;$(ProjectDir)\External\SDL2_image-2.0.5\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)\Sources\Engine;$(ProjectDir)\External\json-develop\single_include;$(ProjectDir)\External\SDL2-2.0.14\include;$(ProjectDir)\External\SDL2_image-2.0.5\include;$(ProjectDir)\External\SDL2_ttf-2.22.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)\External\SDL2-2.0.14\lib\x64;$(ProjectDir)\External\SDL2_image-2.0.5\lib\x64;$(ProjectDir)\External\SDL2_ttf-2.22.0\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -160,7 +160,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d  "$(ProjectDir)External\SDL2-2.0.14\lib\x64\SDL2.dll" "$(OutDir)"</Command>
