--- a/TanksProgrammingTest/TanksProgrammingTest.vcxproj
+++ b/TanksProgrammingTest/TanksProgrammingTest.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Sources\Engine\Engine.cpp" />
     <ClCompile Include="Sources\Engine\Entity.cpp" />
     <ClCompile Include="Sources\Engine\EntityComponent.cpp" />
+    <ClCompile Include="Sources\Engine\PhysicsComponent.cpp" />
     <ClCompile Include="Sources\Engine\ResourceManager.cpp" />
     <ClCompile Include="Sources\Engine\Scene.cpp" />
     <ClCompile Include="Sources\Engine\TextureComponent.cpp" />
@@ -32,11 +33,16 @@
     <ClInclude Include="Sources\Engine\Engine.h" />
     <ClInclude Include="Sources\Engine\Entity.h" />
     <ClInclude Include="Sources\Engine\EntityComponent.h" />
+    <ClInclude Include="Sources\Engine\PhysicsComponent.h" />
     <ClInclude Include="Sources\Engine\ResourceManager.h" />
     <ClInclude Include="Sources\Engine\Scene.h" />
     <ClInclude Include="Sources\Engine\TextureComponent.h" />
     <ClInclude Include="Sources\Engine\EngineUtils.h" />
     <ClInclude Include="Sources\Game\PlayerInputComponent.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="External\SDL2_image-2.0.5\lib\x64\SDL2_image.dll" />
+    <None Include="External\SDL2_ttf-2.22.0\lib\x64\SDL2_ttf.dll" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
