added basic gui, stage timer, health, flag to protect

--- a/TanksProgrammingTest/Resources/Entities/Projectile.json
+++ b/TanksProgrammingTest/Resources/Entities/Projectile.json
@@ -9,6 +9,10 @@
 			"Type": "ProjectileMovementComponent"
 		},
 		{
+			"Type": "HealthComponent",
+			"StartValue": 1
+		},
+		{
 			"Type": "PhysicsComponent",
 			"IsStatic": false,
 			"Width": 10,
