disabled: friendly fire
fixed: debug collisions
added: shoot cooldown, ProfileScope, enemies respawn

--- a/TanksProgrammingTest/Resources/Entities/Projectile.json
+++ b/TanksProgrammingTest/Resources/Entities/Projectile.json
@@ -9,6 +9,9 @@
 			"Type": "ProjectileMovementComponent"
 		},
 		{
+			"Type": "TeamComponent"
+		},
+		{
 			"Type": "HealthComponent",
 			"StartValue": 1
 		},
@@ -18,7 +21,7 @@
 			"Width": 10,
 			"Height": 10,
 			"CollisionLayer": "Projectile",
-			"DestroyOnCollisionMask": "All"
+			"DamageOnCollisionMask": "All"
 		}
 	]
 }
