cleanup, added more enemy types, stage transitions

--- a/TanksProgrammingTest/Resources/Entities/Projectile.json
+++ b/TanksProgrammingTest/Resources/Entities/Projectile.json
@@ -18,6 +18,7 @@
 		{
 			"Type": "PhysicsComponent",
 			"IsStatic": false,
+			"MovementSpeed": 600,
 			"Width": 10,
 			"Height": 10,
 			"CollisionLayer": "Projectile",
