--- a/TanksProgrammingTest/TanksProgrammingTest.vcxproj.filters
+++ b/TanksProgrammingTest/TanksProgrammingTest.vcxproj.filters
@@ -27,29 +27,23 @@
     <ClCompile Include="Sources\Engine\Entity.cpp">
       <Filter>Source Files\Engine</Filter>
     </ClCompile>
+    <ClCompile Include="Sources\Engine\EntityComponent.cpp">
+      <Filter>Source Files\Engine</Filter>
+    </ClCompile>
     <ClCompile Include="Sources\Engine\ResourceManager.cpp">
       <Filter>Source Files\Engine</Filter>
     </ClCompile>
     <ClCompile Include="Sources\Engine\Scene.cpp">
       <Filter>Source Files\Engine</Filter>
     </ClCompile>
+    <ClCompile Include="Sources\Engine\TextureComponent.cpp">
+      <Filter>Source Files\Engine</Filter>
+    </ClCompile>
     <ClCompile Include="Sources\Game\Main.cpp">
       <Filter>Source Files\Game</Filter>
     </ClCompile>
-    <ClCompile Include="Sources\Engine\Components\EntityComponent.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Sources\Engine\Components\PhysicsComponent.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Sources\Engine\Components\ProjectileMovementComponent.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Sources\Engine\Components\TextureComponent.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Sources\Game\Components\PlayerInputComponent.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Sources\Game\PlayerInputComponent.cpp">
+      <Filter>Source Files\Game</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -59,32 +53,23 @@
     <ClInclude Include="Sources\Engine\Entity.h">
       <Filter>Source Files\Engine</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\Engine\EntityComponent.h">
+      <Filter>Source Files\Engine</Filter>
+    </ClInclude>
     <ClInclude Include="Sources\Engine\ResourceManager.h">
       <Filter>Source Files\Engine</Filter>
     </ClInclude>
     <ClInclude Include="Sources\Engine\Scene.h">
       <Filter>Source Files\Engine</Filter>
     </ClInclude>
-    <ClInclude Include="Sources\Engine\EngineUtils.h">
+    <ClInclude Include="Sources\Engine\TextureComponent.h">
       <Filter>Source Files\Engine</Filter>
     </ClInclude>
-    <ClInclude Include="Sources\Engine\Components\EntityComponent.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Sources\Game\PlayerInputComponent.h">
+      <Filter>Source Files\Game</Filter>
     </ClInclude>
-    <ClInclude Include="Sources\Engine\Components\PhysicsComponent.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Sources\Engine\Components\ProjectileMovementComponent.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Sources\Engine\Components\TextureComponent.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Sources\Engine\Vector2D.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Sources\Game\Components\PlayerInputComponent.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Sources\Engine\EngineUtils.h">
+      <Filter>Source Files\Engine</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
